crates/vescpkg-rs/tests/ui/raw_startup_is_macro_only.rs
fn main() {
    let _ = vescpkg_rs::__macro_support::__package_start_from_raw(core::ptr::null_mut());
}
